Vultr/treafik_ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: traefik-ingress

  namespace: default

  annotations:

    kubernetes.io/ingress.class: traefik

spec:

  rules:

  - host: udangbet.com

    http:

      paths:

      - backend:

          service:

            name: nginx-web

            port:

              number: 80

        path: /

        pathType: Prefix
