Vultr/treafik_ingress_tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
  name: traefik-ingress
  namespace: api
spec:
  rules:
  - host: api.octosplay.com
    http:
      paths:
      - backend:
          service:
            name: apache2api
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: api-staging.octosplay.com
    http:
      paths:
      - backend:
          service:
            name: apache2api
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - api.octosplay.com
    secretName: octosplay.com-tls
  - hosts:
    - api-staging.octosplay.com
    secretName: octosplay.com-tls
status:
  loadBalancer: {}
